# shape-area

./: HISTORY.rst  LICENSE  README.rst  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  make.bat
docs/source/: modules.rst  shape_area.rst
src/shape_area/: __init__.py  base.py  cli.py  factory.py  figures.py  types.py
tests/: __init__.py  test_shape_area.py
