[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shape_area"
version = "0.1.0"
description = "Library for calculating area of geometrical figures (circle, triangle)"
readme = "README.md"
authors = [
  { name = "Ruslan Kondrashuk", email = "ruslankondrashuk1992@gmail.com" }
]
maintainers = [
  { name = "Ruslan Kondrashuk", email = "ruslankondrashuk1992@gmail.com" }
]
license = { text = "MIT license" }
dependencies = [
  "typer>=0.9",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "coverage>=7.5",
  "ruff>=0.3.5",
  "mypy>=1.8",
  "sphinx>=7.0",
  "sphinx-autobuild>=2024.0",
  "sphinx_rtd_theme>=2.0",
  "tox>=4.0",
  "twine>=5.0.0",
  "bump2version>=1.0.1",
  "watchdog>=4.0.0"
]

[project.scripts]
shape-area = "shape_area.cli:app"

[project.urls]
homepage = "https://github.com/GoodchildTrevor/shape_area"
changelog = "https://github.com/GoodchildTrevor/shape_area/blob/master/changelog.md"
bugs = "https://github.com/GoodchildTrevor/shape_area/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
